--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "json-server": "json-server --watch db.json",
-    "live-server": "live-server --ignore=./db.json ."
+    "json-server": "json-server --watch ./db/db.json",
+    "live-server":"live-server --ignore=./db/db.json .",
+    "start":"npm run json:server & npm run live-server"
   },
   "repository": {
     "type": "git",
